<resources>
    <string name="app_name">Canchas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Ubicación</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="cambiar_clave">Cambiar contraseña</string>
    <string name="menu_reservar">Hacer reserva</string>
    <string name="detalle_cancha">Detalle cancha</string>
    <string name="horario_cancha">Elegí tu horario</string>
    <string name="pagar_cancha">Realizá tu pago</string>
    <string name="menu_reservas">Mis reservas</string>
    <string name="detalle_reserva">Detalle reserva</string>
    <string name="menu_salir">Salir</string>
</resources>