<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.ulp.canchas.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.ulp.canchas.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarClaveFragment"
            app:destination="@id/cambiarClaveFragment" />
    </fragment>
    <fragment
        android:id="@+id/cambiarClaveFragment"
        android:name="com.ulp.canchas.ui.perfil.CambiarClaveFragment"
        android:label="@string/cambiar_clave"
        tools:layout="@layout/fragment_cambiar_clave" >
        <action
            android:id="@+id/action_cambiarClaveFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/nav_reservar"
        android:name="com.ulp.canchas.ui.reserva.CanchasFragment"
        android:label="@string/menu_reservar"
        tools:layout="@layout/fragment_canchas" >
        <action
            android:id="@+id/action_nav_reservar_to_detalleCanchaFragment"
            app:destination="@id/detalleCanchaFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleCanchaFragment"
        android:name="com.ulp.canchas.ui.reserva.DetalleCanchaFragment"
        android:label="@string/detalle_cancha"
        tools:layout="@layout/fragment_detalle_cancha" >
        <action
            android:id="@+id/action_detalleCanchaFragment_to_nav_reservar"
            app:destination="@id/nav_reservar" />
        <action
            android:id="@+id/action_detalleCanchaFragment_to_horarioCanchaFragment"
            app:destination="@id/horarioCanchaFragment" />
    </fragment>
    <fragment
        android:id="@+id/horarioCanchaFragment"
        android:name="com.ulp.canchas.ui.reserva.HorarioCanchaFragment"
        android:label="@string/horario_cancha"
        tools:layout="@layout/fragment_horario_cancha" >
        <action
            android:id="@+id/action_horarioCanchaFragment_to_detalleCanchaFragment"
            app:destination="@id/detalleCanchaFragment" />
    </fragment>
</navigation>